global-rate-limit/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
  namespace: global-rate-limit
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: nginx-svc.global-rate-limit.svc.cluster.local
            port:
              number: 80
